--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sports",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://gitname.github.io/roger",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
